12-ingress/nginx/ingress-without-ssl.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: animals
  labels:
    client: lion
---
apiVersion: v1
kind: Pod
metadata:
  name: animals-lion-server
  namespace: animals
  labels:
    client: lion
    app: web-server
spec:
  containers:
  - name: lino-app
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: animals-lion-server-service
  namespace: animals
  labels:
    client: lion
spec:
  type: ClusterIP
  selector:
    app: web-server
  ports:
  - port: 80
---
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-http
  namespace: animals
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jayecluster.com
    http:
      paths:
      - path: /
        backend:
          serviceName: animals-lion-server-service
          servicePort: 80
