12-ingress/nginx/nginx-https-redirect-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-https
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - jayecluster.com
      secretName: tls-secret
  rules:
  - host: jayecluster.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80

# please follow two steps before deployment

# openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=nginxsvc/O=nginxsvc"
# kubectl create secret tls tls-secret --key tls.key --cert tls.crt
